--- a/themes/hugo-split-theme/static/assets/css/split.css
+++ b/themes/hugo-split-theme/static/assets/css/split.css
@@ -192,7 +192,7 @@ body.page-template-page-fullsingle-split p {
   margin-bottom: 20px;
   margin-top: 20px;
   letter-spacing: 0.4px;
-  color: #23ce82;
+  color: #f2ee13;
 }
 .split-intro .tagline {
   color: #CCCCCC;
