--- a/themes/hugo-split-theme/static/assets/css/split.css
+++ b/themes/hugo-split-theme/static/assets/css/split.css
@@ -185,14 +185,14 @@ body.page-template-page-fullsingle-split p {
   letter-spacing: -2px;
 }
 .split-intro h1 {
-  font-weight: 400;
+  font-weight: 600;
   text-transform: uppercase;
   font-size: 20px;
   line-height: 16px;
   margin-bottom: 20px;
   margin-top: 20px;
   letter-spacing: 0.4px;
-  color: #f2ee13;
+  color: #9a9a2b;
 }
 .split-intro .tagline {
   color: #CCCCCC;
