--- a/themes/hugo-split-theme/static/assets/css/split.css
+++ b/themes/hugo-split-theme/static/assets/css/split.css
@@ -338,14 +338,13 @@ body.page-template-page-fullsingle-split p {
   }
 }
 .split-lists .split-list h3 {
-  font-weight: 400;
+  font-weight: 600;
   text-transform: uppercase;
-  font-size: 11px;
+  font-size: 13px;
   line-height: 11px;
   margin-bottom: 31px;
-  color: #848d96;
+  color: #4464ff;
   letter-spacing: 2px;
-  opacity: 0.5;
 }
 .split-lists .split-list ul li {
   font-size: 16px;
