--- a/themes/hugo-split-theme/static/assets/css/split.css
+++ b/themes/hugo-split-theme/static/assets/css/split.css
@@ -202,7 +202,7 @@ body.page-template-page-fullsingle-split p {
 
 .split-bio {
   padding: 40px 0 20px 0;
-  font-family: "Lora", serif;
+  font-family: "sans-serif", serif;
 }
 @media (max-width: 1200px) {
   .split-bio {
