--- a/themes/hugo-split-theme/static/assets/css/split.css
+++ b/themes/hugo-split-theme/static/assets/css/split.css
@@ -252,6 +252,7 @@ body.page-template-page-fullsingle-split p {
   font-style: normal;
   font-weight: normal;
   color: inherit;
+  font-family: sans-serif;
 }
 .split-bio h1 small, .split-bio .h1 small,
 .split-bio h2 small, .split-bio .h2 small,
