--- a/themes/hugo-split-theme/static/assets/css/split.css
+++ b/themes/hugo-split-theme/static/assets/css/split.css
@@ -218,6 +218,7 @@ body.page-template-page-fullsingle-split p {
   color: #848d96;
   margin-bottom: 20px;
   line-height: inherit;
+  font-family: sans-serif;
 }
 .split-bio a {
   color: #848d96;
