--- a/themes/hugo-split-theme/layouts/partials/intro.html
+++ b/themes/hugo-split-theme/layouts/partials/intro.html
@@ -1,5 +1,5 @@
 <div class="split-intro">
-<img src="/images/logo4.png" width="300mm" height="164mm">
+<img src="/images/weblog.png" width="300mm" height="164mm">
   {{ with .Title }}<h1>{{ . }}</h1>{{ end }}
   {{ with .Params.tagline }}<span class="tagline">{{ . }}</span>{{ end }}
 </div>
