--- a/themes/hugo-split-theme/static/assets/css/split.css
+++ b/themes/hugo-split-theme/static/assets/css/split.css
@@ -198,7 +198,7 @@ body.page-template-page-fullsingle-split p {
   color: #9a9a2b;
 }
 .split-intro .tagline {
-  color: #CCCCCC;
+  color: #eaeaea;
   font-size: 50px;
   line-height: normal;
 }
@@ -218,7 +218,7 @@ body.page-template-page-fullsingle-split p {
   }
 }
 .split-bio p {
-  color: #848d96;
+  color: #bfbfbf;
   margin-bottom: 20px;
   line-height: inherit;
   font-family: "Montserrat";
