--- a/themes/hugo-split-theme/static/assets/css/split.css
+++ b/themes/hugo-split-theme/static/assets/css/split.css
@@ -195,7 +195,7 @@ body.page-template-page-fullsingle-split p {
   margin-bottom: 20px;
   margin-top: 20px;
   letter-spacing: 0.4px;
-  color: #bfe230;
+  color: #accc00;
 }
 .split-intro .tagline {
   color: #eaeaea;
