--- a/themes/hugo-split-theme/static/assets/css/split.css
+++ b/themes/hugo-split-theme/static/assets/css/split.css
@@ -122,7 +122,7 @@ body.page-template-page-fullsingle-split {
   animation: fadein 2s;
 }
 body.page-template-page-fullsingle-split p {
-  color: #848d96;
+  color: #fdfdfd;
 }
 
 .fs-split {
