--- a/themes/hugo-split-theme/static/assets/css/split.css
+++ b/themes/hugo-split-theme/static/assets/css/split.css
@@ -182,6 +182,7 @@ body.page-template-page-fullsingle-split p {
 @media (max-width: 800px) {
   .fs-split .split-content .split-content-vertically-center {
     padding: 20px;
+    font: caption;
   }
 }
 
