--- a/themes/hugo-split-theme/static/assets/css/split.css
+++ b/themes/hugo-split-theme/static/assets/css/split.css
@@ -187,11 +187,12 @@ body.page-template-page-fullsingle-split p {
     font-variant-caps: normal;
     font-variant-numeric: normal;
     font-variant-east-asian: normal;
-    font-weight: 500;
+    font-weight: 400;
     font-stretch: normal;
     font-size: 14px;
     line-height: normal;
-    letter-spacing: 1px;
+    letter-spacing: 1.5px;
+    font-family: system-ui;
   }
 }
 
