--- a/themes/hugo-split-theme/static/assets/css/split.css
+++ b/themes/hugo-split-theme/static/assets/css/split.css
@@ -192,7 +192,7 @@ body.page-template-page-fullsingle-split p {
     font-size: 14px;
     line-height: normal;
     letter-spacing: 1.5px;
-    font-family: system-ui;
+    font-family: -webkit-pictograph;
   }
 }
 
